# zelda-api

./: .gitignore  .importlinter  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
application/dto/: game_dto.py
application/use_cases/: create_game.py  delete_game.py  get_all_game.py  get_game_by_id.py  update_game.py
config/: database.py
domain/: entities.py  repositories.py
infrastructure/persistence/models/: game_model.py
infrastructure/persistence/repositories/: sqlalchemy_game_repository.py
infrastructure/web/: controllers.py  dependencies.py
modules/characters/: router.py
modules/characters/application/: characters_dto.py
modules/characters/application/use_cases/: create_character.py  delete_character.py  get_all_character.py  get_character_by_id.py  update_character.py
modules/characters/domain/: entities.py  repositories.py
modules/characters/infrastructure/persistence/: character_model.py  sqlalchemy_character_repository.py
modules/characters/infrastructure/web/: dependencies.py
modules/games/: router.py
modules/games/application/use_cases/: create_game.py  delete_game.py  get_all_game.py  get_game_by_id.py  update_game.py
modules/games/domain/: repositories.py
modules/games/infrastructure/persistence/: game_model.py  sqlalchemy_game_repository.py
modules/games/infrastructure/web/: dependencies.py
tests/: test_architecture.py
