[project]
name = "zelda-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carine Neris", email = "carine_neris@hotmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
]

[dependency-groups]
dev = [
    "ipdb (>=0.13.13,<0.14.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-archon (>=0.0.7,<0.0.8)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# Garante que a raiz do projeto esteja no PATH de busca dos módulos e testes
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]